--- a/index.html
+++ b/index.html
@@ -99,6 +99,17 @@
                 </div>
               </div>
             </div>
+
+            <div class="sct-toy-list">
+              <div class="sct-toy-item">
+                <a class="sct-toy-link" href="/free-ascii-art/cats/cute-ascii-cat/">
+                  Fancy Some ASCII Animal Art?
+                </a>    
+                <div class="sct-toy-sub">
+                  Cute Free ASCII Cats Meow When you Copy!
+                </div>
+              </div>
+            </div>
           <div class="sct-spacer"></div>
 
             <div class="sct-footer-note">
